added the frist blog

--- a/online-school.html
+++ b/online-school.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fast git hub </title>
+   <link rel="stylesheet" href="style/frist.css">
 </head>
 <body>
+    <h3>
+        my frist project
+    </h3>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo obcaecati consequatur dolor voluptas laborum rem architecto facilis ad explicabo. Vel dignissimos soluta aliquid incidunt at ad voluptatum assumenda pariatur omnis.</p>
     </div>
