added the second and the third blog

--- a/online-school.html
+++ b/online-school.html
@@ -13,5 +13,17 @@
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo obcaecati consequatur dolor voluptas laborum rem architecto facilis ad explicabo. Vel dignissimos soluta aliquid incidunt at ad voluptatum assumenda pariatur omnis.</p>
     </div>
+    <h3>
+        my second project
+    </h3>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo obcaecati consequatur dolor voluptas laborum rem architecto facilis ad explicabo. Vel dignissimos soluta aliquid incidunt at ad voluptatum assumenda pariatur omnis.</p>
+    </div>
+    <h3>
+        my third project
+    </h3>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo obcaecati consequatur dolor voluptas laborum rem architecto facilis ad explicabo. Vel dignissimos soluta aliquid incidunt at ad voluptatum assumenda pariatur omnis.</p>
+    </div>
 </body>
 </html>
